--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.jpa.show-sql=true
 spring.application.name=evalia
 
 # Rest Properties
-server.servlet.context-path=/api/v1
+server.servlet.context-path=/evalia/api
 
 # Spring Security Properties
 rsa.publicKey=certs/public.pem
@@ -23,3 +23,5 @@ logging.level.org.springframework.security=TRACE
 
 # App Properties
 evalia.security.jwt.expiration=600
+
+
