--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,13 +1,13 @@
 # Data Properties
-spring.datasource.url=jdbc:mysql://localhost:3306/evalia?createDatabaseIfNotExist=true&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/evalia?createDatabaseIfNotExist=true&useSSL=false&characterEncoding=utf8&useUnicode=true
 spring.datasource.username=root
-spring.datasource.password=Vermeg+123
+spring.datasource.password=root
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 
+# JPA Properties
+spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-
 
 # Spring Security Properties
 spring.security.user.password=root
