--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,9 @@ local.properties
 # sbteclipse plugin
 .target
 
+# ignore idea workscpace folder
+.idea
+
 # Tern plugin
 .tern-project
 
@@ -119,3 +122,5 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 
+/.vscode/launch.json
+/.vscode/settings.json
