security:authentication switch to xml config

--- a/docker/.env
+++ b/docker/.env
@@ -1,4 +1,5 @@
+MYSQL_ROOT_PASSWORD=evalia@2024-8
 MYSQL_DATABASE=evalia_db
 MYSQL_USERNAME=evalia_user
-MYSQL_PASSWORD=evalia@2023
+MYSQL_PASSWORD=evalia@2024
 APP_PORT=80
