--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -2,28 +2,24 @@ version: '3'
 services:
 
   mysql:
-    container_name: Evalia_DB
-    image: mysql:latest
+    image: mysql:8
     environment:
       MYSQL_DATABASE: ${MYSQL_DATABASE}
       MYSQL_USER: ${MYSQL_USERNAME}
       MYSQL_PASSWORD: ${MYSQL_PASSWORD}
-      MYSQL_RANDOM_ROOT_PASSWORD: 'true'
-      #MYSQL_ROOT_PASSWORD: ''
-    ports:
-      - "3306:3306"
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
     volumes:
-      - mysqlVolume:/var/lib/mysql
-      - ./scripts/:/docker-entrypoint-initdb.d/
+      - evalia_database:/var/lib/mysql
+      - ./scripts:/docker-entrypoint-initdb.d
     networks:
-      - Sesame
+      - EVALIA
     healthcheck:
       test: "test -f /tmp/sqlend"
-      interval: 30s
+      interval: 10s
       retries: 10
 
-  app:
-    container_name: Evalia
+  evalia:
+    image: evalia
     build:
       context: ..
       dockerfile: docker/Dockerfile
@@ -31,16 +27,18 @@ services:
       MYSQL_DATABASE: ${MYSQL_DATABASE}
       MYSQL_USERNAME: ${MYSQL_USERNAME}
       MYSQL_PASSWORD: ${MYSQL_PASSWORD}
+    env_file: .env
     depends_on:
-      - mysql
+      mysql:
+        condition: service_healthy
     ports:
       - "${APP_PORT}:8080"
     networks:
-      - Sesame
+      - EVALIA
 
 volumes:
-  mysqlVolume:
+  evalia_database:
 
 networks:
-  Sesame:
+  EVALIA:
      driver: bridge
