--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,7 +1,7 @@
 # Data Properties
 spring.datasource.url=jdbc:mysql://localhost:3306/evalia?createDatabaseIfNotExist=true&useSSL=false&characterEncoding=utf8&useUnicode=true
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=Vermeg+123
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 
 # JPA Properties
@@ -9,10 +9,6 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto=update
 
-# Spring Security Properties
-spring.security.user.password=root
-spring.security.user.roles=ADMIN
-
 # Logging Properties
-#logging.level.org.springframework=TRACE
-logging.level.com.evalia.backend=TRACE
+logging.level.org.springframework.security.web.FilterChainProxy=DEBUG
+
