Finish authentication layer

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,9 @@ spring.data.rest.basePath=/api
 rsa.publicKey=certs/public.pem
 rsa.privateKey=certs/private.pem
 security.jwt.expiration=600
+
+# Spring Data Rest Properties
+#spring.hateoas.use-hal-as-default-json-media-type=false
+
+# Evalia Properties
+evalia.security.admin.password=$2a$12$vXaw8xHJckRtKEO1mG6nLOtjqO8mAG3XjrXNDNdyEQzVaR7RzYLqS
