--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,12 @@ security.jwt.expiration=600
 
 # Evalia Properties
 evalia.security.admin.password=$2a$12$vXaw8xHJckRtKEO1mG6nLOtjqO8mAG3XjrXNDNdyEQzVaR7RzYLqS
+evalia.security.passwordToken.expiration=20
+
+#Gmail SMTP server
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=evalia.tunis@gmail.com
+spring.mail.password=Evaliaapptunis
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
