--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,7 +20,7 @@ evalia.security.passwordToken.expiration=20
 #Gmail SMTP server
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=evalia.tunis@gmail.com
-spring.mail.password=Evaliaapptunis
+spring.mail.username=mohamedbh.benhamouda@gmail.com
+spring.mail.password=whzdcwpfdhnvqhqc
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
