--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,7 +1,7 @@
 # Data Properties
-spring.datasource.url=jdbc:mysql://localhost:3306/evalia?createDatabaseIfNotExist=true&useSSL=false&characterEncoding=utf8&useUnicode=true
-spring.datasource.username=root
-spring.datasource.password=Vermeg+123
+spring.datasource.url=jdbc:mysql://localhost:3306/evalia_db?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false&characterEncoding=utf8&useUnicode=true
+spring.datasource.username=evalia_user
+spring.datasource.password=evalia@2024
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 
 # JPA Properties
