adjustments & code refactoring

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,7 @@ security.jwt.expiration=600
 
 # Spring Data Rest Properties
 #spring.hateoas.use-hal-as-default-json-media-type=false
+spring.data.rest.defaultMediaType=application/json
 
 # Evalia Properties
 evalia.security.admin.password=$2a$12$vXaw8xHJckRtKEO1mG6nLOtjqO8mAG3XjrXNDNdyEQzVaR7RzYLqS
