adding postgresql in application properties

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,14 +1,16 @@
-# Data Properties
-spring.datasource.url=jdbc:mysql://localhost:3306/evalia_db?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false&characterEncoding=utf8&useUnicode=true
-spring.datasource.username=evalia_user
-spring.datasource.password=evalia@2024
-spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-
-# JPA Properties
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
-spring.jpa.hibernate.ddl-auto=update
-
 # Logging Properties
 logging.level.org.springframework.security.web.FilterChainProxy=DEBUG
 
+
+# Data Properties
+spring.datasource.url=jdbc:postgresql://localhost:5432/evaliadb
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
+# JPA Properties
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+
+security.basic.enabled=false
