postgresql instead of mysql

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -3,7 +3,7 @@ logging.level.org.springframework.security.web.FilterChainProxy=DEBUG
 
 
 # Data Properties
-spring.datasource.url=jdbc:postgresql://localhost:5432/evaliadb
+spring.datasource.url=jdbc:postgresql://localhost:5432/evalia_db
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
