--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -3,9 +3,7 @@ logging.level.org.springframework.security.web.FilterChainProxy=DEBUG
 
 
 # Data Properties
-spring.datasource.url=jdbc:postgresql://localhost:5432/evalia_db
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.url=jdbc:postgresql://evalia_db_user:A2OE2ZdjxFTaZ0lO5MO41pSsgigjxdsG@dpg-cptl1808fa8c738mdkm0-a/evalia_db
 spring.datasource.driver-class-name=org.postgresql.Driver
 # JPA Properties
 spring.jpa.hibernate.ddl-auto=update
