edit database for render

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -4,6 +4,8 @@ logging.level.org.springframework.security.web.FilterChainProxy=DEBUG
 
 # Data Properties
 spring.datasource.url=jdbc:postgresql://evalia_db_user:A2OE2ZdjxFTaZ0lO5MO41pSsgigjxdsG@dpg-cptl1808fa8c738mdkm0-a/evalia_db
+spring.datasource.username=evalia_db_user
+spring.datasource.password=A2OE2ZdjxFTaZ0lO5MO41pSsgigjxdsG
 spring.datasource.driver-class-name=org.postgresql.Driver
 # JPA Properties
 spring.jpa.hibernate.ddl-auto=update
