--- a/src/main/resources/application-docker.properties
+++ b/src/main/resources/application-docker.properties
@@ -1,8 +1,9 @@
 # Data Properties
 spring.datasource.url=jdbc:postgresql://evalia_db_user:A2OE2ZdjxFTaZ0lO5MO41pSsgigjxdsG@dpg-cptl1808fa8c738mdkm0-a/evalia_db
-spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=evalia_db_user
-spring.datasource.port=5432
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.password=A2OE2ZdjxFTaZ0lO5MO41pSsgigjxdsG
+spring.datasource.driver-class-name=org.postgresql.Driver
+# JPA Properties
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
