--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,22 +1,20 @@
 version: '3'
 services:
-
-  mysql:
-    image: mysql:8
+  postgres:
+    image: postgres:16
     environment:
-      MYSQL_DATABASE: ${MYSQL_DATABASE}
-      MYSQL_USER: ${MYSQL_USERNAME}
-      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
-      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
+      POSTGRES_DB: ${PGSQL_DATABASE}
+      POSTGRES_USER: ${PGSQL_USERNAME}
+      POSTGRES_PASSWORD: ${PGSQL_PASSWORD}
     ports:
-      - '3306:3306'
+      - '5432:5432'
     volumes:
-      - evalia_database:/var/lib/mysql
+      - evalia_database:/var/lib/postgresql/data
       - ./scripts:/docker-entrypoint-initdb.d
     networks:
       - EVALIA
     healthcheck:
-      test: "test -f /tmp/sqlend"
+      test: "pg_isready -U ${PGSQL_USERNAME}"
       interval: 10s
       retries: 10
 
@@ -26,12 +24,12 @@ services:
       context: ..
       dockerfile: docker/Dockerfile
     environment:
-      MYSQL_DATABASE: ${MYSQL_DATABASE}
-      MYSQL_USERNAME: ${MYSQL_USERNAME}
-      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
+      PGSQL_DATABASE: ${PGSQL_DATABASE}
+      PGSQL_USERNAME: ${PGSQL_USERNAME}
+      PGSQL_PASSWORD: ${PGSQL_PASSWORD}
     env_file: .env
     depends_on:
-      mysql:
+      postgres:
         condition: service_healthy
     ports:
       - "${APP_PORT}:8080"
@@ -43,4 +41,4 @@ volumes:
 
 networks:
   EVALIA:
-     driver: bridge
+    driver: bridge
