--- a/src/main/resources/application-docker.properties
+++ b/src/main/resources/application-docker.properties
@@ -1,5 +1,5 @@
 # Data Properties
-spring.datasource.url=jdbc:postgresql://evalia_db_user:A2OE2ZdjxFTaZ0lO5MO41pSsgigjxdsG@dpg-cptl1808fa8c738mdkm0-a/evalia_db
+spring.datasource.url=jdbc:postgresql://evalia_db_user:A2OE2ZdjxFTaZ0lO5MO41pSsgigjxdsG@dpg-cptl1808fa8c738mdkm0-a.oregon-postgres.render.com/evalia_db
 spring.datasource.username=evalia_db_user
 spring.datasource.password=A2OE2ZdjxFTaZ0lO5MO41pSsgigjxdsG
 spring.datasource.driver-class-name=org.postgresql.Driver
