--- a/src/main/resources/application-docker.properties
+++ b/src/main/resources/application-docker.properties
@@ -1,7 +1,8 @@
 # Data Properties
-spring.datasource.url=jdbc:postgresql://evalia_db_user:A2OE2ZdjxFTaZ0lO5MO41pSsgigjxdsG@dpg-cptl1808fa8c738mdkm0-a.oregon-postgres.render.com/evalia_db
-spring.datasource.username=evalia_db_user
-spring.datasource.password=A2OE2ZdjxFTaZ0lO5MO41pSsgigjxdsG
+# Data Properties
+spring.datasource.url=jdbc:mysql://${DATABASE_HOST:mysql}:${DATABASE_PORT:3306}/${DATABASE_DATABASE}?createDatabaseIfNotExist=true&useUnicode=true&characterEncoding=UTF-8
+spring.datasource.username=${DATABASE_USERNAME}
+spring.datasource.password=${DATABASE_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 # JPA Properties
 spring.jpa.hibernate.ddl-auto=update
