--- a/src/main/resources/application-docker.properties
+++ b/src/main/resources/application-docker.properties
@@ -1,6 +1,6 @@
 # Data Properties
 # Data Properties
-spring.datasource.url=jdbc:mysql://${DATABASE_HOST:mysql}:${DATABASE_PORT:3306}/${DATABASE_DATABASE}?createDatabaseIfNotExist=true&useUnicode=true&characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://${DATABASE_HOST:mysql}:${DATABASE_PORT:3306}/${DATABASE_NAME}?createDatabaseIfNotExist=true&useUnicode=true&characterEncoding=UTF-8
 spring.datasource.username=${DATABASE_USERNAME}
 spring.datasource.password=${DATABASE_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
