--- a/src/main/resources/application-docker.properties
+++ b/src/main/resources/application-docker.properties
@@ -1,5 +1,4 @@
 # Data Properties
-# Data Properties
 spring.datasource.url=jdbc:${DATABASE_TYPE:mysql}://${DATABASE_HOST:mysql}:${DATABASE_PORT:3306}/${DATABASE_NAME}?createDatabaseIfNotExist=true&useUnicode=true&characterEncoding=UTF-8
 spring.datasource.username=${DATABASE_USERNAME}
 spring.datasource.password=${DATABASE_PASSWORD}
@@ -8,3 +7,5 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+# Server Properties
+server.port=${PORT:8080}
