--- a/src/main/resources/application-docker.properties
+++ b/src/main/resources/application-docker.properties
@@ -1,9 +1,29 @@
-# Data Properties
-spring.datasource.url=jdbc:postgresql://evalia_db_user:A2OE2ZdjxFTaZ0lO5MO41pSsgigjxdsG@dpg-cptl1808fa8c738mdkm0-a.oregon-postgres.render.com/evalia_db
-spring.datasource.username=evalia_db_user
-spring.datasource.password=A2OE2ZdjxFTaZ0lO5MO41pSsgigjxdsG
+# Logging Properties
+logging.level.org.springframework.security.web.FilterChainProxy=DEBUG
+
+# Data Properties for LOCAL connection
+spring.datasource.url=jdbc:postgresql://localhost:5432/evalia_db
+spring.datasource.username=postgres
+spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
+
 # JPA Properties
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+
+security.basic.enabled=false
+
+# Data Properties
+# spring.datasource.url=jdbc:postgresql://evalia_db_user:A2OE2ZdjxFTaZ0lO5MO41pSsgigjxdsG@dpg-cptl1808fa8c738mdkm0-a.oregon-postgres.render.com/evalia_db
+# spring.datasource.username=evalia_db_user
+# spring.datasource.password=A2OE2ZdjxFTaZ0lO5MO41pSsgigjxdsG
+# spring.datasource.driver-class-name=org.postgresql.Driver
+# JPA Properties
+# spring.jpa.hibernate.ddl-auto=update
+# spring.jpa.show-sql=true
+# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+
+# security.basic.enabled=false
