--- a/docker/.env
+++ b/docker/.env
@@ -1,4 +1,9 @@
+# PGSQL_DATABASE=evalia_db
+# PGSQL_USERNAME=evalia_db_user
+# PGSQL_PASSWORD=A2OE2ZdjxFTaZ0lO5MO41pSsgigjxdsG
+# APP_PORT=80
+
 PGSQL_DATABASE=evalia_db
-PGSQL_USERNAME=evalia_db_user
-PGSQL_PASSWORD=A2OE2ZdjxFTaZ0lO5MO41pSsgigjxdsG
+PGSQL_USERNAME=postgres
+PGSQL_PASSWORD=postgres
 APP_PORT=80
