Github actions pipline + image controller and rest controller code refactoring + fixing properties file  + adding new profile test

--- a/docker/.env
+++ b/docker/.env
@@ -1,9 +1,4 @@
-# PGSQL_DATABASE=evalia_db
-# PGSQL_USERNAME=evalia_db_user
-# PGSQL_PASSWORD=A2OE2ZdjxFTaZ0lO5MO41pSsgigjxdsG
-# APP_PORT=80
-
-PGSQL_DATABASE=evalia_db
-PGSQL_USERNAME=postgres
-PGSQL_PASSWORD=postgres
+POSTGRES_DB=evalia_db
+POSTGRES_USERNAME=postgres
+POSTGRES_PASSWORD=postgres
 APP_PORT=80
