--- a/src/main/resources/application-docker.properties
+++ b/src/main/resources/application-docker.properties
@@ -1,28 +1,9 @@
 # Data Properties
-spring.datasource.url=jdbc:postgresql://evalia_db_user:A2OE2ZdjxFTaZ0lO5MO41pSsgigjxdsG@dpg-cptl1808fa8c738mdkm0-a.oregon-postgres.render.com/evalia_db
-spring.datasource.username=evalia_db_user
-spring.datasource.password=A2OE2ZdjxFTaZ0lO5MO41pSsgigjxdsG
-spring.datasource.driver-class-name=org.postgresql.Driver
-
-# JPA Properties
+spring.datasource.url=jdbc:${DATABASE_TYPE:postgresql}://${DATABASE_HOST:postgres}:${DATABASE_PORT:5432}/${DATABASE_NAME}?sslmode=disable&charSet=UTF8
+spring.datasource.username=${DATABASE_USERNAME}
+spring.datasource.password=${DATABASE_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 # Server Properties
 server.port=${PORT:8080}
-
-
-security.basic.enabled=false
-
-# Data Properties
-# spring.datasource.url=jdbc:postgresql://evalia_db_user:A2OE2ZdjxFTaZ0lO5MO41pSsgigjxdsG@dpg-cptl1808fa8c738mdkm0-a.oregon-postgres.render.com/evalia_db
-# spring.datasource.username=evalia_db_user
-# spring.datasource.password=A2OE2ZdjxFTaZ0lO5MO41pSsgigjxdsG
-# spring.datasource.driver-class-name=org.postgresql.Driver
-# JPA Properties
-# spring.jpa.hibernate.ddl-auto=update
-# spring.jpa.show-sql=true
-# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-
-
-# security.basic.enabled=false
