--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -18,9 +18,9 @@ jobs:
     runs-on: self-hosted
 
     steps:
-    - name: echo test
-      run: echo ${{ github.repository }}
-    # - uses: actions/checkout@v4
+    # - name: echo test
+    #   run: echo ${{ github.repository }}
+    - uses: actions/checkout@v4
     # - name: Build with Maven
     #   run: mvn -B package --file pom.xml -DoutputDirectory=/opt/deployments
     # - name: Run Evalia
