--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -19,10 +19,12 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+    - name: Stop the previous running instance
+      run: mvn spring-boot:stop
     - name: Build with Maven
       run: mvn -B package
     - name: Run Evalia
-      run: echo "${DATABASE_HOST}|${DATABASE_NAME}|${DATABASE_USERNAME}|${DATABASE_PASSWORD}" && mvn spring-boot:start -Dspring-boot.run.profiles=test
+      run: echo "$DATABASE_HOST|$DATABASE_NAME|$DATABASE_USERNAME|$DATABASE_PASSWORD" && mvn spring-boot:start -Dspring-boot.run.profiles=test
       env:
           DATABASE_HOST: ${DATABASE_HOST}
           DATABASE_NAME: ${DATABASE_NAME}
