--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -24,9 +24,9 @@ jobs:
     - name: Build with Maven
       run: mvn -B package
     - name: Run Evalia
-      run: echo ${{ secrets.DATABASE_USERNAME }} && mvn spring-boot:start -Dspring-boot.run.profiles=test
+      run: echo ${{ env.DATABASE_HOST }} && mvn spring-boot:start -Dspring-boot.run.profiles=test
       env:
-          DATABASE_HOST: ${DATABASE_HOST}
-          DATABASE_NAME: ${DATABASE_NAME}
+          DATABASE_HOST: ${{ env.DATABASE_HOST }}
+          DATABASE_NAME: ${{ env.DATABASE_NAME }}
           DATABASE_USERNAME: ${{ secrets.DATABASE_USERNAME }}
           DATABASE_PASSWORD: ${{ secrets.DATABASE_PASSWORD }}
