--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -24,7 +24,7 @@ jobs:
     - name: Build with Maven
       run: mvn -B package
     - name: Run Evalia
-      run: echo ${{ env.DATABASE_HOST }} && mvn spring-boot:start -Dspring-boot.run.profiles=test
+      run: echo "host $DATABASE_HOST , name $DATABASE_NAME , user $DATABASE_USERNAME , pass $DATABASE_PASSWORD"
       env:
           DATABASE_HOST: ${{ env.DATABASE_HOST }}
           DATABASE_NAME: ${{ env.DATABASE_NAME }}
