externalize logs to file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,3 +25,6 @@ spring.mail.username=mohamedbh.benhamouda@gmail.com
 spring.mail.password=whzdcwpfdhnvqhqc
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+# Logging Properties
+logging.file.name=/opt/deployments/log/evalia.log
