externalize logging path

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,4 +27,4 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 # Logging Properties
-logging.file.name=/opt/deployments/log/evalia.log
+logging.file.name=${LOG_PATH:/var/log/evalia.log}
