--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -23,6 +23,8 @@ jobs:
       run: sudo systemctl stop evalia.service
     - name: Build with Maven
       run: mvn -B package
+    - name: Pre-deploy
+      run: cp target/evalia-1.0-SNAPSHOT.war /opt/deployments/evalia
     - name: Run Evalia
       run: sudo systemctl start evalia.service
       env:
