--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,13 +1,15 @@
 # Data Properties
-spring.datasource.url=jdbc:postgresql://localhost:5432/evalia_db
-spring.datasource.username=evalia_user
-spring.datasource.password=evalia@2024
-spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/evalia?createDatabaseIfNotExist=true&useSSL=false&characterEncoding=utf8&useUnicode=true
+spring.datasource.username=root
+spring.datasource.password=Vermeg+123
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 
 # JPA Properties
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto=update
 
 # Logging Properties
 logging.level.org.springframework.security.web.FilterChainProxy=DEBUG
+
+security.jwt.expiration=7200
