--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,3 +28,10 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 
 # Logging Properties
 logging.file.name=${LOG_PATH:/var/log/evalia.log}
+
+# File upload Properties
+spring.servlet.multipart.max-file-size=5MB
+spring.servlet.multipart.max-request-size=5MB
+
+# File system Storage Properties
+evalia.storage.upload.loacation=${user.home}/evalia/uploads
