--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -5,5 +5,6 @@ spring.datasource.password=${DATABASE_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.driverClassName=org.postgresql.Driver
 # Server Properties
 server.port=${PORT:8080}
