adding swagger-ui for as api documentation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,15 +4,15 @@ server.servlet.context-path=/evalia
 
 # Rest Properties
 spring.data.rest.basePath=/api
+spring.data.rest.defaultMediaType=application/json
 
 # Spring Security Properties
 rsa.publicKey=certs/public.pem
 rsa.privateKey=certs/private.pem
 security.jwt.expiration=1800
 
-# Spring Data Rest Properties
-#spring.hateoas.use-hal-as-default-json-media-type=false
-spring.data.rest.defaultMediaType=application/json
+# Spring web MVC properties
+spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
 
 # Evalia Properties
 evalia.security.admin.password=$2a$12$vXaw8xHJckRtKEO1mG6nLOtjqO8mAG3XjrXNDNdyEQzVaR7RzYLqS
