--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,12 +1,12 @@
 # Data Properties
-spring.datasource.url=jdbc:mysql://localhost:3306/evalia?createDatabaseIfNotExist=true&useSSL=false&characterEncoding=utf8&useUnicode=true
-spring.datasource.username=root
-spring.datasource.password=Vermeg+123
-spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:postgresql://vps-aed437eb.vps.ovh.net:5432/evalia_db
+spring.datasource.username=ev_app
+spring.datasource.password=eVaLia@pfe_esprit.2024
+spring.datasource.driverClassName=org.postgresql.Driver
 
 # JPA Properties
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 
 # Logging Properties
