--- a/pom.xml
+++ b/pom.xml
@@ -161,9 +161,7 @@
 			<artifactId>
 				postgresql
 			</artifactId>
-			<version>
-				42.7.3
-			</version>
+			<scope>runtime</scope>
 		</dependency>
 		<dependency>
 			<groupId>
@@ -208,6 +206,7 @@
 			<optional>
 				true
 			</optional>
+			<version>1.18.30</version>
 		</dependency>
 	</dependencies>
 	<build>
