--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -11,5 +11,5 @@ spring.jpa.hibernate.ddl-auto=update
 
 # Logging Properties
 logging.level.org.springframework.security.web.FilterChainProxy=DEBUG
-
+server.port=80
 security.jwt.expiration=7200
