--- a/docker/.env
+++ b/docker/.env
@@ -1,4 +1,4 @@
-POSTGRES_DB=evalia_db
-POSTGRES_USERNAME=postgres
-POSTGRES_PASSWORD=postgres
+DATABASE_NAME=evalia_db
+DATABASE_USERNAME=postgres
+DATABASE_PASSWORD=postgres
 APP_PORT=80
