add legalentities fil

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,7 +1,7 @@
-# Data Properties
-spring.datasource.url=jdbc:postgresql://vps-aed437eb.vps.ovh.net:5432/evalia_db
-spring.datasource.username=ev_app
-spring.datasource.password=eVaLia@pfe_esprit.2024
+# Data Properties vps-aed437eb.vps.ovh.net ev_app  eVaLia@pfe_esprit.2024 5432
+spring.datasource.url=jdbc:postgresql://localhost:5433/evalia_db
+spring.datasource.username=postgres
+spring.datasource.password=postgres
 spring.datasource.driverClassName=org.postgresql.Driver
 
 # JPA Properties
